<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/courtnba"
    android:fillViewport="true"
    tools:context="com.example.android.basketball.MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="@dimen/width_zero"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/m_start"
                    android:text="@string/eastern"
                    android:textColor="@color/studioBlack"
                    android:textSize="@dimen/textSize"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/team_a_score"
                    android:layout_width="match_parent"
                    android:layout_height="246dp"
                    android:freezesText="true"
                    android:gravity="center"
                    android:paddingBottom="@dimen/paddingBottom"
                    android:paddingTop="@dimen/paddingTp"
                    android:text="@string/_0"
                    android:textColor="@color/green_m"
                    android:textSize="@dimen/TextSize"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="@dimen/paddingWidth"
                    android:layout_height="@dimen/height_dp"
                    android:layout_marginBottom="@dimen/marginBottom_s"
                    android:layout_marginStart="@dimen/margin_S"
                    android:layout_marginTop="@dimen/marginTop_s"
                    android:background="@color/green_m"
                    android:onClick="addThreeForTeamA"
                    android:text="@string/_3_points"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/height_m"
                    android:layout_marginBottom="@dimen/marginBottom_s"
                    android:layout_marginEnd="@dimen/marginEnd_m"
                    android:layout_marginStart="@dimen/marginStart"
                    android:background="@color/green_m"
                    android:onClick="addTwoForTeamA"
                    android:text="@string/_2_points"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="@dimen/width"
                    android:layout_height="@dimen/height_dp"
                    android:layout_marginBottom="@dimen/marginBottom_n"
                    android:layout_marginEnd="@dimen/marginEnd_m"
                    android:layout_marginStart="@dimen/marginLeft_m"
                    android:background="@color/green_m"
                    android:onClick="addOneForTeamA"
                    android:text="@string/free_throw"
                    android:textStyle="bold" />

            </LinearLayout>

            <View
                android:layout_width="@dimen/width_xs"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/marginTop_m"
                android:background="@android:color/black" />

            <LinearLayout
                android:layout_width="@dimen/width_null"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/marginStart_sm"
                    android:paddingEnd="@dimen/paddingEnd_null"
                    android:paddingStart="@dimen/paddingStart"
                    android:text="@string/western"
                    android:textColor="@color/studioBlack"
                    android:textSize="@dimen/textSize"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/team_b_score"
                    android:layout_width="match_parent"
                    android:layout_height="256dp"
                    android:freezesText="true"
                    android:gravity="center"
                    android:paddingBottom="@dimen/paddingBottom_m"
                    android:paddingTop="@dimen/paddingTp"
                    android:text="@string/_0"
                    android:textColor="@color/m_Blue"
                    android:textSize="@dimen/textSize_ml"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="@dimen/buttonWidth"
                    android:layout_height="@dimen/buttonHeight"
                    android:layout_marginBottom="@dimen/marginBottom_s"
                    android:layout_marginStart="60dp"
                    android:background="@color/m_Blue"
                    android:onClick="addThreeForTeamB"
                    android:text="@string/_3_points"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_marginBottom="@dimen/marginBottom_s"
                    android:layout_marginStart="80dp"
                    android:background="@color/m_Blue"
                    android:onClick="addTwoForTeamB"
                    android:text="@string/_2_points"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="68dp"
                    android:layout_height="@dimen/height_dp"
                    android:layout_marginStart="100dp"
                    android:background="@color/m_Blue"
                    android:onClick="addOneForTeamB"
                    android:text="@string/free_throw"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/reset"
            android:layout_width="@dimen/layout_width_sm"
            android:layout_height="@dimen/height_m"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/marginBottom_sm"
            android:background="@color/darkYellow"
            android:onClick="resetScore"
            android:text="@string/reset"
            android:textStyle="bold" />

    </RelativeLayout>
</ScrollView>
